feat: migrated to algod v2 and indexer v2, added docker support

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "run-sync": "node service/sync/initSync.js && node service/sync/syncAll.js"
   },
   "eslintConfig": {
     "extends": "react-app"
