--- a/zarf/compose/compose-config.yaml
+++ b/zarf/compose/compose-config.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 
-services:
-
-  db:
-    environment:
-      - POSTGRES_PASSWORD=postgres
+#services:
+#
+#  db:
+#    environment:
+#      - POSTGRES_PASSWORD=postgres
