--- a/zarf/docker/dockerfile.algosearch-frontend
+++ b/zarf/docker/dockerfile.algosearch-frontend
@@ -18,6 +18,7 @@ FROM node:alpine AS runner
 WORKDIR /app
 
 ENV NODE_ENV production
+ENV NEXT_PUBLIC_API_URL localhost:5000
 
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nextjs -u 1001
