--- a/zarf/docker/dockerfile.all
+++ b/zarf/docker/dockerfile.all
@@ -28,23 +28,61 @@ RUN go build -ldflags "-X main.build=${BUILD_REF}"
 WORKDIR /service/backend/app/sidecar/metrics
 RUN go build -ldflags "-X main.build=${BUILD_REF}"
 
-# Run the Go Binary in Alpine.
-FROM alpine:3.15
+# Frontend
+# Install dependencies only when needed
+FROM node:alpine AS deps
+# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
+RUN apk add --no-cache libc6-compat
+WORKDIR /app
+COPY frontend/package.json frontend/yarn.lock ./
+RUN yarn install --frozen-lockfile
 
-# https://stackoverflow.com/questions/59094236/error-unknown-time-zone-america-los-angeles-in-time-loadlocation
-# https://stackoverflow.com/questions/59044243/timezones-failing-to-load-in-go-1-13
+# Rebuild the source code only when needed
+FROM node:alpine AS builder
+WORKDIR /app
+COPY ./frontend .
+COPY --from=deps /app/node_modules ./node_modules
+ENV NEXT_PUBLIC_API_URL http://localhost:5000
+RUN yarn build && yarn install --production --ignore-scripts --prefer-offline
+
+# Production image, copy all the files and run next
+FROM node:alpine AS runner
+WORKDIR /app
+
+ENV NODE_ENV production
+
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S nextjs -u 1001
+
+# You only need to copy next.config.js if you are NOT using the default configuration
+# COPY --from=builder /app/next.config.js ./
+COPY --from=builder /app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package.json ./package.json
+
+USER root
+
+EXPOSE 3000
+
+ENV PORT 3000
+
+# Next.js collects completely anonymous telemetry data about general usage.
+# Learn more here: https://nextjs.org/telemetry
+# Uncomment the following line in case you want to disable telemetry.
+# ENV NEXT_TELEMETRY_DISABLED 1
+
 RUN apk add --no-cache tzdata
 
 ARG BUILD_DATE
 ARG BUILD_REF
-COPY --from=build_algosearch /service/backend/app/algo-admin/algo-admin /service/admin
-COPY --from=build_algosearch /service/backend/app/algosearch/algosearch /service/algosearch
-COPY --from=build_algosearch /service/zarf/keys/. /service/zarf/keys/.
-COPY --from=build_algosearch /service/swagger /service/swagger
-COPY --from=build_algosearch /service/zarf/start-all.sh /service/start-all.sh
-COPY --from=build_algosearch /service/backend/app/sidecar/metrics/metrics /service/metrics
+COPY --from=build_algosearch /service/backend/app/algo-admin/algo-admin /app/admin
+COPY --from=build_algosearch /service/backend/app/algosearch/algosearch /app/algosearch
+COPY --from=build_algosearch /service/zarf/keys/. /app/zarf/keys/.
+COPY --from=build_algosearch /service/swagger /app/swagger
+COPY --from=build_algosearch /service/zarf/start-all.sh /app/start-all.sh
+COPY --from=build_algosearch /service/backend/app/sidecar/metrics/metrics /app/metrics
 
-WORKDIR /service
 RUN chmod +x ./start-all.sh
 CMD ["./start-all.sh"]
 
