--- a/zarf/compose/compose.yaml
+++ b/zarf/compose/compose.yaml
@@ -10,7 +10,6 @@ services:
     container_name: zipkin
     networks:
       - shared-network
-#    image: openzipkin/zipkin:2.21
     image: openzipkin/zipkin
     ports:
       - 9411:9411
@@ -19,18 +18,19 @@ services:
     container_name: algosearch-backend
     networks:
       - shared-network
-    image: algosearch-backend-amd64:1.1
+    image: algosearch-backend:1.1
     ports:
       - 5000:5000 # CRUD API
       - 4000:4000 # DEBUG API
     depends_on:
       - zipkin
+      - dbinit
 
   algosearch-frontend:
     container_name: algosearch-frontend
     networks:
       - shared-network
-    image: algosearch-frontend-amd64:1.1
+    image: algosearch-frontend:1.1
     ports:
       - 3000:3000
     depends_on:
@@ -40,9 +40,48 @@ services:
     container_name: algosearch-metrics
     networks:
       - shared-network
-    image: algosearch-metrics-amd64:1.1
+    image: algosearch-metrics:1.1
     ports:
       - 3001:3001 # EXPVAR API
       - 4001:4001 # DEBUG API
     depends_on:
       - algosearch-backend
+
+  algosearch-db:
+    image: couchdb:3.2.0
+    container_name: "algorand-sandbox-couchdb"
+    hostname: couchdb.server
+    networks:
+      - shared-network
+    ports:
+      - 5984:5984
+    # Optional
+    # volumes:
+    #   - ./db-data:/opt/couchdb/data
+    # extra_hosts:
+    #   - "dockerhost:$DOCKERHOST"
+    # https://github.com/apache/couchdb-docker/issues/55
+    #    command: curl -u admin:password -X PUT 128.0.0.1:5984/_users && curl -u admin:password -X PUT 127.0.0.1:5984/test
+    # command: curl -u algorand:algorand -X PUT http://128.0.0.1:5984/_users && curl -u algorand:algorand -X PUT http://127.0.0.1:5984/algo_global
+    environment:
+      - COUCHDB_USER=algorand
+      - COUCHDB_PASSWORD=algorand
+
+  dbinit:
+    image: curlimages/curl
+    container_name: hr_couchdb_init
+    networks:
+      - shared-network
+    depends_on:
+      - algosearch-db
+    command: >
+      sh -c
+      "sleep 5s &&
+      curl -X PUT "${COUCH_DB_HOST}://${COUCH_DB_USER}:${COUCH_DB_PASSWORD}@${COUCH_DB_HOST}/_users" &&
+      curl -X PUT "${COUCH_DB_HOST}://${COUCH_DB_USER}:${COUCH_DB_PASSWORD}@${COUCH_DB_HOST}/_users/_security" -d '{}'" &&
+      curl -X PUT "${COUCH_DB_HOST}://${COUCH_DB_USER}:${COUCH_DB_PASSWORD}@${COUCH_DB_HOST}/algo_global?partitioned=false"
+#      curl -X PUT http://algorand:algorand@algosearch-db:5984/_users &&
+#      curl -X PUT http://algorand:algorand@algosearch-db:5984/_users/_security -d '{}' &&
+#      curl -X PUT http://algorand:algorand@algosearch-db:5984/algo_global?partitioned=false"
+#      curl -X PUT http://algorand:algorand@algosearch-db:5984/algo_global?partitioned=false &&
+#      curl -X PUT http://algorand:algorand@algosearch-db:5984/algo_global/_security -d '{\"members\": {}, \"admins\": {\"roles\": [\"_admin\"] }}'"
