--- a/zarf/docker/dockerfile.algosearch-frontend
+++ b/zarf/docker/dockerfile.algosearch-frontend
@@ -9,9 +9,9 @@ RUN yarn install --frozen-lockfile
 # Rebuild the source code only when needed
 FROM node:alpine AS builder
 WORKDIR /app
-COPY ./frontend .
 COPY --from=deps /app/node_modules ./node_modules
-RUN NEXT_PUBLIC_API_URL=APP_NEXT_PUBLIC_API_URL yarn build && yarn install --production --ignore-scripts --prefer-offline
+COPY ./frontend .
+RUN NEXT_PUBLIC_API_URL=APP_NEXT_PUBLIC_API_URL yarn build
 
 # Production image, copy all the files and run next
 FROM node:alpine AS runner
@@ -25,10 +25,14 @@ RUN adduser -S nextjs -u 1001
 # You only need to copy next.config.js if you are NOT using the default configuration
 # COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
+# COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/entrypoint.sh ./entrypoint.sh
+
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER root
 
@@ -44,4 +48,4 @@ ENV PORT 3000
 RUN chmod +x ./entrypoint.sh
 ENTRYPOINT ["/app/entrypoint.sh"]
 
-CMD ["node_modules/.bin/next", "start"]
+CMD ["node", "server.js"]
