--- a/zarf/docker/dockerfile.all
+++ b/zarf/docker/dockerfile.all
@@ -40,9 +40,9 @@ RUN yarn install --frozen-lockfile
 # Rebuild the source code only when needed
 FROM node:alpine AS builder
 WORKDIR /app
-COPY ./frontend .
 COPY --from=deps /app/node_modules ./node_modules
-RUN NEXT_PUBLIC_API_URL=APP_NEXT_PUBLIC_API_URL yarn build && yarn install --production --ignore-scripts --prefer-offline
+COPY ./frontend .
+RUN NEXT_PUBLIC_API_URL=APP_NEXT_PUBLIC_API_URL yarn build
 
 # Production image, copy all the files and run next
 FROM node:alpine AS runner
@@ -58,8 +58,8 @@ RUN apk --no-cache add curl
 # You only need to copy next.config.js if you are NOT using the default configuration
 # COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
-COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
+# COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
+# COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/entrypoint.sh ./entrypoint.sh
 
@@ -88,6 +88,11 @@ COPY --from=build_algosearch /service/zarf/keys/. /app/zarf/keys/.
 COPY --from=build_algosearch /service/swagger /app/swagger
 COPY --from=build_algosearch /service/zarf/start-all.sh /app/start-all.sh
 COPY --from=build_algosearch /service/backend/app/sidecar/metrics/metrics /app/metrics
+
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 RUN chmod +x ./start-all.sh
 RUN chmod +x ./entrypoint.sh
