--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.2.6",
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
+    "react-use-websocket": "^2.9.1",
     "sass": "^1.44.0",
     "timeago-react": "^3.0.4",
     "typescript": "^4.5.4",
