--- a/zarf/compose/compose-config.yaml
+++ b/zarf/compose/compose-config.yaml
@@ -20,6 +20,7 @@ services:
       ALGOSEARCH_COUCH_DB_USER: "kevin"
       ALGOSEARCH_COUCH_DB_PASSWORD: "makechesterproud!"
       ALGOSEARCH_COUCH_DB_HOST: "89.39.110.254:5984"
+      ALGOSEARCH_COUCH_DB_NAME: "algo_global"
       ALGOSEARCH_ALGOD_PROTOCOL: "http"
       ALGOSEARCH_ALGOD_ADDR: "89.39.110.254:4001"
       ALGOSEARCH_ALGOD_TOKEN: "a2d2ac864300588718c6c05ff241a14fad99d30a19806356f3b9c8008559c4c1"
