--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "browserslist": {
     "production": [
@@ -56,6 +57,7 @@
     "@types/react-table": "^7.7.9",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.8.0",
+    "cypress": "^9.3.1",
     "eslint": "^8.5.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-next": "^12.0.7",
