--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ frontend/.pnp.js
 
 # testing
 /coverage
+frontend/.nyc_output
 
 # production
 /build
@@ -17,6 +18,7 @@ frontend/build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
