--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+/.nyc_output
 
 # production
 /build
@@ -14,7 +15,8 @@
 # misc
 /.next
 .DS_Store
-.envv.local
+.env
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
