Disassemble LogicSig to TEAL in local env

--- a/zarf/compose/compose-config.yaml
+++ b/zarf/compose/compose-config.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   algosearch-backend:
@@ -23,6 +23,9 @@ services:
   algosearch-frontend:
     environment:
       NEXT_PUBLIC_API_URL: "algosearch-backend:5000"
+      NEXT_PUBLIC_ALGOD_PROTOCOL: "http"
+      NEXT_PUBLIC_ALGOD_ADDR: "234.567.89.0:4001"
+      NEXT_PUBLIC_ALGOD_TOKEN: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
 
   algosearch-metrics:
     environment:
