--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "algosdk": "^1.12.0",
     "axios": "^0.24.0",
     "bignumber.js": "^9.0.2",
+    "highlight.js": "^11.4.0",
     "mock-socket": "^9.1.0",
     "moment-timezone": "^0.5.34",
     "next": "^12.0.7",
