--- a/zarf/compose/compose.yaml
+++ b/zarf/compose/compose.yaml
@@ -3,6 +3,9 @@ version: '3.8'
 networks:
   shared-network:
     driver: bridge
+  sandbox_sandbox-shared-network:
+    driver: bridge
+    external: true
 
 services:
 
@@ -18,6 +21,7 @@ services:
     container_name: algosearch-backend
     networks:
       - shared-network
+      - sandbox_sandbox-shared-network
 #    image: ../docker/dockerfile.algosearch-backend
     image: kevguy/algosearch-backend:latest
     ports:
@@ -31,6 +35,7 @@ services:
     container_name: algosearch-frontend
     networks:
       - shared-network
+      - sandbox_sandbox-shared-network
 #    image: ../docker/dockerfile.algosearch-frontend
     image: kevguy/algosearch-frontend:latest
     ports:
@@ -42,11 +47,12 @@ services:
     container_name: algosearch-metrics
     networks:
       - shared-network
+      - sandbox_sandbox-shared-network
 #    image: ../docker/dockerfile.metrics
     image: kevguy/algosearch-metrics:latest
     ports:
       - 3001:3001 # EXPVAR API
-      - 4001:4001 # DEBUG API
+      - 4003:4003 # DEBUG API
     depends_on:
       - algosearch-backend
 
@@ -56,6 +62,7 @@ services:
     hostname: couchdb.server
     networks:
       - shared-network
+      - sandbox_sandbox-shared-network
     ports:
       - 5984:5984
     # Optional
